# Tavoliere

./: .gitignore  Appendix A — Research Instrumentati.txt  Appendix A — Research Instrumentation.md  CLAUDE.md  FRONTEND_SPEC.md  MCP_SURFACE.md  POSITION.md  README.md  SKILL.md  SPQ-AN.md  SPQ-AN.txt  TEMPLATES.md  Tavoliere — v0.1 Specification.md  Tavoliere — v0.1 Specification.txt  pyproject.toml
backend/: config.py  main.py
backend/api/: actions.py  admin.py  chat.py  consent.py  conventions.py  history.py  profile.py  research.py  research_sessions.py  scratchpad.py  tables.py  ws.py
backend/auth/: deps.py  models.py  routes.py  service.py
backend/cli/: replay.py
backend/engine/: action_engine.py  consensus.py  conventions.py  deck.py  optimistic.py  persistence.py  rate_limiter.py  research_observer.py  scratchpad.py  spqan.py  state.py  table_manager.py  visibility.py
backend/models/: action.py  card.py  chat.py  consent.py  convention.py  dispute.py  event.py  protocol.py  research.py  schema_version.py  scratchpad.py  seat.py  snapshot.py  table.py  zone.py
backend/tests/: conftest.py  test_actions_consensus.py  test_actions_optimistic.py  test_actions_unilateral.py  test_auth.py  test_hardening.py  test_models.py  test_phase2_observable.py  test_phase3_manageable.py  test_phase4_researchable.py  test_replay.py  test_research.py  test_spqan_compliance.py  test_table_lifecycle.py  test_templates_conformance.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: admin.ts  auth.ts  (+8 more)
(+59 files in other folders)
